[workspace]
resolver = "2"

members = [
    "backstop-module",
    "emitter",
    "lending-pool",
    "mocks/mock-oracle",
    "mocks/mock-lending-pool",
    "mocks/mock-pool-factory",
    "oracle",
    "pool-factory",
    "test-suites"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "b1cec10b79cee3c1ecf63079b1088ce97b32c68a"

[workspace.dependencies.fixed-point-math]
version = "0.0.2"

[workspace.dependencies.cast]
version = "0.3.0"
default-features = false
