[workspace]
resolver = "2"

members = [
    "backstop",
    "emitter",
    "pool",
    "mocks/mock-oracle",
    "mocks/mock-pool",
    "mocks/mock-pool-factory",
    "oracle",
    "pool-factory",
    "test-suites"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"

[workspace.dependencies.fixed-point-math]
version = "0.0.2"

[workspace.dependencies.cast]
version = "0.3.0"
default-features = false
