[workspace]
resolver = "2"

members = [
    "backstop",
    "blend-interfaces",
    "emitter",
    "pool",
    "mocks/mock-pool-factory",
    "pool-factory",
    "test-suites"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.0.0"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.0.0"

[workspace.dependencies.cast]
version = "0.3.0"
default-features = false

[workspace.dependencies.sep-40-oracle]
version = "0.2.0"

[workspace.dependencies.sep-41-token]
version = "0.3.0"

[workspace.dependencies.blend-interfaces]
path = "./blend-interfaces"