[package]
name = "b_token"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dependencies]
soroban-sdk = "0.3.1"
soroban-auth = "0.3.1"
rand = {version = "0.7.3"}

[dev_dependencies]
soroban-sdk = { version = "0.3.1", features = ["testutils"] }
soroban-auth = { version = "0.3.1", features = ["testutils"] }
rand = {version = "0.7.3"}