[package]
name = "backstop-module"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.4.0"
soroban-auth = "0.4.0"
fixed-point-math = "0.0.2"
cast = { version = "0.3.0", default-features = false }

[dev_dependencies]
soroban-sdk = { version = "0.4.0", features = ["testutils"] }
soroban-auth = { version = "0.4.0", features = ["testutils"] }
rand = { version = "0.7.3" }