[package]
name = "backstop-module"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
    "dep:mock-pool-factory"
]

[dependencies]
soroban-sdk = { workspace = true }
fixed-point-math = { workspace = true }
cast = { workspace = true }
mock-pool-factory = { path = "../mocks/mock-pool-factory", optional = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-pool-factory = { path = "../mocks/mock-pool-factory", features = ["testutils"] }
