[package]
name = "lending-pool"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
fixed-point-math = { workspace = true }
cast = { workspace = true }
oracle = { path = "../oracle" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
backstop-module = { path = "../backstop-module", features = ["testutils"] }
mock-pool-factory = { path = "../mocks/mock-pool-factory", features = ["testutils"] }
mock-oracle = { path = "../mocks/mock-oracle", features = ["testutils"] }
