[package]
name = "test-suites"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.7.3" }
fixed-point-math = { workspace = true }
lending-pool = { path = "../lending-pool", optional = true }
backstop-module = { path = "../backstop-module", features = ["testutils"] }
pool-factory = { path = "../pool-factory", features = ["testutils"] }
emitter = { path = "../emitter", features = ["testutils"] }
mock-blend-oracle = { path = "../mocks/mock-blend-oracle", features = ["testutils"] }
