[package]
name = "mock-pool-factory"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
lending-pool = { path = "../../lending-pool" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = {version = "0.7.3"}
lending-pool = { path = "../../lending-pool", features = ["testutils"] }