[package]
name = "test-suites-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fixed-point-math = "0.0.2"
soroban-sdk.git = "https://github.com/stellar/rs-soroban-sdk"
soroban-sdk.rev = "b1cec10b79cee3c1ecf63079b1088ce97b32c68a"
soroban-sdk.features = ["testutils"]
extension-trait = "1"

[dependencies.test-suites]
path = ".."

[dependencies.lending-pool]
path = "../../lending-pool"
features = ["testutils"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
