[package]
name = "test-suites-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fixed-point-math = "0.0.2"
soroban-sdk.git = "https://github.com/stellar/rs-soroban-sdk"
soroban-sdk.rev = "18b8fa1a358aa84afd196e2f6d44942798c8f335"
soroban-sdk.features = ["testutils"]
extension-trait = "1"

[dependencies.test-suites]
path = ".."

[dependencies.lending-pool]
path = "../../lending-pool"
features = ["testutils"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"
test = false
doc = false
