[package]
name = "test-suites-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fixed-point-math = "0.0.2"
soroban-sdk.version = "20.0.0-rc2"
soroban-sdk.features = ["testutils"]
extension-trait = "1"

[dependencies.test-suites]
path = ".."

[dependencies.pool]
path = "../../pool"
features = ["testutils"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[lib]
name = "fuzz_common"
path = "lib.rs"

[[bin]]
name = "fuzz_pool_general"
path = "fuzz_targets/fuzz_pool_general.rs"
test = false
doc = false
